# sdi

./: CMakeLists.txt  main.cpp  pedestrianHog.cpp
